BE: fix medkit endpoint
